# HyperCryptLib

./: CMakeLists.txt  Makefile  README.md
include/: hypercrypt.h
src/: CMakeLists.txt  hypercrypt.c
test/: test.c
